maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
			if (setIndication(i,j)==9999) return false
                                         ^JediEscaper:22: error: not found: value xBaggle
var x = xBaggle
        ^JediEscaper:23: error: not found: value yBaggle
var y = yBaggle
        ^